fix issues on smaller phones and convert everything to rems

--- a/src/components/ErrorMessage/index.scss
+++ b/src/components/ErrorMessage/index.scss
@@ -3,6 +3,6 @@
   align-items: center;
 
   &:not(:last-child) {
-    margin-bottom: 20px;
+    margin-bottom: 1rem;
   }
 }
