--- a/src/components/Event/index.scss
+++ b/src/components/Event/index.scss
@@ -11,5 +11,5 @@
 }
 
 .event-info__button {
-  margin-top: 5px;
+  margin-top: .5rem;
 }
