--- a/src/components/Nav/index.scss
+++ b/src/components/Nav/index.scss
@@ -6,7 +6,7 @@ $navbar-background-color: $white !default;
 .navbar__root {
   background: $navbar-background-color;
   box-shadow: 0px 1px 10px 0px $grey-lighter;
-  margin-bottom: 20px;
+  margin-bottom: 1rem;
 }
 
 .navbar__container {
@@ -22,7 +22,7 @@ $navbar-background-color: $white !default;
 }
 
 .navbar__brand {
-  padding: 10px 0;
+  padding: .7rem 0;
 }
 
 .navbar__logo {
@@ -56,16 +56,16 @@ $navbar-background-color: $white !default;
   }
 
   .navbar__item {
-    padding-left: 0.5em;
-    padding-right: 0.5em;
-    margin-left: 0.5em;
-    margin-right: 0.5em;
+    padding-left: .5rem;
+    padding-right: .5rem;
+    margin-left: .5rem;
+    margin-right: .5rem;
     line-height: 3em;
     text-align: center;
-    border-bottom: 5px solid $navbar-background-color;
+    border-bottom: .3rem solid $navbar-background-color;
 
     &.active {
-      border-bottom: 5px solid $primary;
+      border-bottom: .3rem solid $primary;
     }
 
     &:first-child {
@@ -82,7 +82,7 @@ $navbar-background-color: $white !default;
 
     &__admin {
       border: none;
-      padding-left: 1em;
+      padding-left: 1rem;
     }
 
     &.is-active {
@@ -90,19 +90,19 @@ $navbar-background-color: $white !default;
     }
 
     &:last-child {
-      padding-bottom: .5em;
+      padding-bottom: .5rem;
     }
   }
 
   .navbar__item {
     display: block;
-    line-height: 1.5;
+    line-height: 1.5em;
     padding: .5rem;
-    border-left: 5px solid $navbar-background-color;
+    border-left: .3rem solid $navbar-background-color;
     border-top: 1px solid #eee;
 
     &.active {
-      border-left: 5px solid $primary;
+      border-left: .3rem solid $primary;
     }
   }
 }
