--- a/src/components/Page/index.scss
+++ b/src/components/Page/index.scss
@@ -1,5 +1,5 @@
 .page__root {
-  margin-top: 20px;
+  margin-top: 1rem;
   background: #fff;
-  padding: 20px;
+  padding: 1.5rem;
 }
