--- a/src/components/Team/TeamDetails.scss
+++ b/src/components/Team/TeamDetails.scss
@@ -1,5 +1,5 @@
 .team-details__root .button {
-  margin-right: 5px;
+  margin-right: .5rem;
 }
 
 .team-details__section {
